# lib

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README  build.rs  dto_bindgen.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.txt  publish-crates.sh  rust-toolchain-coverage.toml  treefmt.nix  turbo.json
app-wasm/: Cargo.toml
crates/app-core/: Cargo.toml  README
crates/app-core/src/: error.rs  logging.rs
crates/app-core/tests/: logging_error.rs  no_nostr_runtime.rs
crates/app-ffi-swift/: Cargo.toml
crates/app-ffi-swift/src/: lib.rs
crates/app-wasm/: Cargo.toml  README
crates/app-wasm/src/: lib.rs
crates/authority/: Cargo.toml
crates/authority/src/: actor.rs  authorization.rs  error.rs  lib.rs  local_signer.rs  signer.rs
crates/core/: Cargo.toml  README  build.rs
crates/core/src/: currency.rs  decimal.rs  discount.rs  dto.rs  lib.rs  money.rs  percent.rs  quantity.rs  quantity_price.rs  serde_ext.rs  unit.rs
crates/core/tests/: currency.rs  decimal.rs  money.rs  percent.rs  quantity.rs  quantity_price.rs  serde.rs  unit.rs
crates/event_store/: Cargo.toml  README
crates/event_store/migrations/: 0001_event_store.down.sql  0001_event_store.up.sql
crates/event_store/src/: error.rs  lib.rs  migrations.rs  model.rs  store.rs
crates/events/: Cargo.toml  README
crates/events-codec/: Cargo.toml  README
crates/events-codec-wasm/: Cargo.toml  README
crates/events-codec-wasm/src/: lib.rs
crates/events-codec/src/: d_tag.rs  event_ref.rs  lib.rs  parsed.rs
crates/events-codec/tests/: app_data.rs  codec_error_job.rs  comment.rs  domain_encode_non_serde.rs  event_ref.rs  follow.rs  geochat.rs  gift_wrap.rs  job_feedback.rs  job_request.rs  job_result.rs  job_traits.rs  job_util.rs  list.rs  list_set.rs  listing.rs  message.rs  message_file.rs  post.rs  profile.rs  reaction.rs  seal.rs  structured_decode.rs  structured_encode_default.rs  tag_builders.rs
crates/events-indexed/: Cargo.toml  README
crates/events-indexed/src/: checkpoint.rs  manifest.rs  serde_ext.rs  types.rs
crates/events/src/: account.rs  app_data.rs  article.rs  calendar.rs  comment.rs  contract.rs  coop.rs  document.rs  draft.rs  dto.rs  event_head.rs  farm.rs  farm_crdt.rs  farm_file.rs  farm_workspace.rs  file_metadata.rs  follow.rs  gcs.rs  geochat.rs  gift_wrap.rs  group.rs  http_auth.rs  ids.rs  job.rs  job_feedback.rs  job_request.rs  job_result.rs  kinds.rs  lib.rs  list.rs  list_set.rs  listing.rs  location.rs  message.rs  message_file.rs  order.rs  order_economics.rs  plot.rs  post.rs  profile.rs  (+12 more)
crates/events_codec/: Cargo.toml  README
crates/events_codec/src/: d_tag.rs  error.rs  event_ref.rs  field_helpers.rs  lib.rs  social_helpers.rs  tag_builders.rs  wire.rs
crates/events_codec/tests/: app_data.rs  article.rs  calendar.rs  codec_error_job.rs  comment.rs  domain_encode_non_serde.rs  event_ref.rs  farm_crdt.rs  farm_workspace.rs  field_events.rs  file_metadata.rs  follow.rs  geochat.rs  gift_wrap.rs  group.rs  job_feedback.rs  job_request.rs  job_result.rs  job_traits.rs  job_util.rs  list.rs  list_set.rs  listing.rs  message.rs  message_file.rs  post.rs  profile.rs  profile_encode.rs  reaction.rs  report.rs  repost.rs  seal.rs  social_events.rs  structured_decode.rs  structured_encode_default.rs  tag_builders.rs  wire.rs
crates/events_codec_wasm/: Cargo.toml  README
crates/events_codec_wasm/pkg/: package.json
crates/events_codec_wasm/src/: lib.rs
crates/events_indexed/: Cargo.toml  README
crates/events_indexed/src/: checkpoint.rs  dto.rs  lib.rs  manifest.rs  serde_ext.rs  types.rs
crates/geocoder/: Cargo.toml  README
crates/geocoder/src/: asset.rs  error.rs  geocoder.rs  lib.rs  model.rs
crates/geocoder/tests/: geocoder.rs
crates/identity/: Cargo.toml  README
crates/identity/src/: error.rs  identity.rs  lib.rs  spec.rs  storage.rs  username.rs
crates/identity/tests/: identity.rs
events/: Cargo.toml  build.rs
events/bindings/ts/: package.json
events/src/: account.rs  app_data.rs  comment.rs  coop.rs  farm.rs  follow.rs  gift_wrap.rs  job.rs  job_feedback.rs  job_request.rs  job_result.rs  kinds.rs  lib.rs  listing.rs  message_file.rs  plot.rs  post.rs  profile.rs  reaction.rs  relay_document.rs  tags.rs  typeshare_kinds.rs
events/src/follow/: models.rs
events/src/job/: mod.rs
events/src/listing/: models.rs
events/src/profile/: models.rs
events/src/reaction/: models.rs
events/src/relay_document/: models.rs
identity/: Cargo.toml  build.rs
identity/src/: error.rs  identity.rs  lib.rs  username.rs
identity/tests/: identity.rs
net-core/: Cargo.toml  build.rs
net-core/src/: error.rs  keys.rs  logging.rs
net-core/src/nostr_client/: inner.rs  manager.rs  mod.rs  status.rs
nostr-runtime/: Cargo.toml
nostr-runtime/src/: error.rs  lib.rs  runtime.rs  store.rs  types.rs
sql-wasm-core/: Cargo.toml
sql-wasm-core/src/: embedded.rs  error.rs  lib.rs  utils.rs
tangle-db/: Cargo.toml
tangle-db-wasm/: Cargo.toml
tangle-db-wasm/src/: lib.rs
tangle-db/migrations/: 0005_nostr_profile.up.sql  0008_farm_gcs_location.down.sql  0008_farm_gcs_location.up.sql  0013_plot_gcs_location.down.sql  0014_farm_tag.down.sql  0015_plot_tag.down.sql  0015_plot_tag.up.sql  0016_farm_member.down.sql  0018_nostr_event_state.up.sql
tangle-db/src/: backup.rs  export.rs  lib.rs
tangle-db/src/models/: farm.rs  farm_gcs_location.rs  farm_member.rs  farm_member_claim.rs  farm_tag.rs  gcs_location.rs  log_error.rs  media_image.rs  nostr_event_state.rs  nostr_profile.rs  plot.rs  (+7 more)
tangle-events-wasm/: Cargo.toml
tangle-events-wasm/src/: lib.rs
tangle-schema/: Cargo.toml  build.rs
tangle-schema/src/: lib.rs
tangle-sql/: Cargo.toml
tangle-sql-wasm/: Cargo.toml
tangle-sql-wasm/pkg/: package.json
tangle-sql-wasm/src/: lib.rs  utils.rs
tangle-sql/migrations/: 0000_init.down.sql  0000_init.up.sql  0005_nostr_profile.up.sql
tangle-sql/src/: backup.rs  lib.rs  migrations.rs
trade/: Cargo.toml  build.rs
types/: Cargo.toml  build.rs
types/src/: types.rs
(+1254 files in other folders)
