[workspace]
members = [
    "core",
    "events",
    "events-codec",
    "events-codec-wasm",
    "events-indexed",
    "identity",
    "log",
    "net",
    "net-core",
    "nostr",
    "runtime",
    "sql-wasm-bridge",
    "sql-wasm-core",
    "sql-core",
    "tangle-schema",
    "tangle-sql",
    "tangle-sql-wasm",
    "trade",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
radroots-core = { path = "core", version = "0.1.0", default-features = false }
radroots-events = { path = "events", version = "0.1.0", default-features = false }
radroots-events-codec = { path = "events-codec", version = "0.1.0", default-features = false }
radroots-events-indexed = { path = "events-indexed", version = "0.1.0", default-features = false }
radroots-identity = { path = "identity", version = "0.1.0", default-features = false }
radroots-nostr = { path = "nostr", version = "0.1.0", default-features = false }
radroots-runtime = { path = "runtime", version = "0.1.0", default-features = false }
radroots-log = { path = "log", version = "0.1.0", default-features = false }
radroots-net = { path = "net", version = "0.1.0", default-features = false }
radroots-net-core = { path = "net-core", version = "0.1.0", default-features = false }
radroots-sql-wasm-bridge = { path = "sql-wasm-bridge", version = "0.1.0" }
radroots-sql-wasm-core = { path = "sql-wasm-core", version = "0.1.0" }
radroots-sql-core = { path = "sql-core", version = "0.1.0" }
radroots-tangle-schema = { path = "tangle-schema", version = "0.1.0", default-features = false }
radroots-tangle-sql = { path = "tangle-sql", version = "0.1.0", default-features = false }
radroots-tangle-sql-wasm = { path = "tangle-sql-wasm", version = "0.1.0" }
radroots-trade = { path = "trade", version = "0.1.0", default-features = false }
radroots-types = { path = "types", version = "0.1.0", default-features = false }

anyhow = { version = "1" }
cfg-if = { version = "1" }
chrono = { version = "0.4" }
clap = { version = "4" }
config = { version = "0.14" }
directories = { version = "6" }
futures = { version = "0.3" }
hex = { version = "0.4" }
js-sys = { version = "0.3" }
nostr = { version = "0.44.1", path = "../refs/rust-nostr/crates/nostr" }
nostr-relay-pool = { version = "0.44.0", path = "../refs/rust-nostr/crates/nostr-relay-pool" }
nostr-sdk = { version = "0.44.1", path = "../refs/rust-nostr/crates/nostr-sdk" }
num_cpus = { version = "1.17.0" }
secrecy = { version = "0.10.3" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde-wasm-bindgen = { version = "0.6" }
reqwest = { version = "0.12", default-features = false }
rust_decimal = { version = "1", default-features = false }
rust_decimal_macros = { version = "1" }
sled = { version = "0.34" }
tempfile = { version = "3" }
thiserror = { version = "1" }
tokio = { version = "1" }
toml = { version = "0.8" }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
ts-rs = { version = "11.1" }
typeshare = { version = "1" }
url  = { version = "2" }
uuid = { version = "1.16.0", features = ["v4"] }
uniffi = { version = "0.29.4" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
rusqlite = { version = "0.31", default-features = false }
