[workspace]
members = [
  "crates/core",
  "crates/events",
  "crates/events-codec",
  "crates/events-codec-wasm",
  "crates/events-indexed",
  "crates/geocoder",
  "crates/identity",
  "crates/log",
  "crates/net",
  "crates/net-core",
  "crates/nostr",
  "crates/nostr-accounts",
  "crates/nostr-connect",
  "crates/nostr-signer",
  "crates/nostr-ndb",
  "crates/nostr-runtime",
  "crates/runtime",
  "crates/sql-wasm-bridge",
  "crates/sql-wasm-core",
  "crates/sql-core",
  "crates/replica-db-schema",
  "crates/replica-sync",
  "crates/replica-sync-wasm",
  "crates/replica-db",
  "crates/replica-db-wasm",
  "crates/trade",
  "crates/types",
  "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.92.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/radrootslabs/lib"
homepage = "https://radroots.org"
readme = "README"

[workspace.dependencies]
radroots-core = { path = "crates/core", version = "0.1.0-alpha.1", default-features = false }
radroots-events = { path = "crates/events", version = "0.1.0-alpha.1", default-features = false }
radroots-events-codec = { path = "crates/events-codec", version = "0.1.0-alpha.1", default-features = false }
radroots-events-indexed = { path = "crates/events-indexed", version = "0.1.0-alpha.1", default-features = false }
radroots-geocoder = { path = "crates/geocoder", version = "0.1.0-alpha.1" }
radroots-identity = { path = "crates/identity", version = "0.1.0-alpha.1", default-features = false }
radroots-nostr = { path = "crates/nostr", version = "0.1.0-alpha.1", default-features = false }
radroots-nostr-accounts = { path = "crates/nostr-accounts", version = "0.1.0-alpha.1", default-features = false }
radroots-nostr-connect = { path = "crates/nostr-connect", version = "0.1.0-alpha.1", default-features = false }
radroots-nostr-signer = { path = "crates/nostr-signer", version = "0.1.0-alpha.1", default-features = false }
radroots-nostr-ndb = { path = "crates/nostr-ndb", version = "0.1.0-alpha.1", default-features = false }
radroots-runtime = { path = "crates/runtime", version = "0.1.0-alpha.1", default-features = false }
radroots-log = { path = "crates/log", version = "0.1.0-alpha.1", default-features = false }
radroots-net = { path = "crates/net", version = "0.1.0-alpha.1", default-features = false }
radroots-net-core = { path = "crates/net-core", version = "0.1.0-alpha.1", default-features = false }
radroots-nostr-runtime = { path = "crates/nostr-runtime", version = "0.1.0-alpha.1", default-features = false }
radroots-sql-wasm-bridge = { path = "crates/sql-wasm-bridge", version = "0.1.0-alpha.1" }
radroots-sql-wasm-core = { path = "crates/sql-wasm-core", version = "0.1.0-alpha.1", default-features = false }
radroots-sql-core = { path = "crates/sql-core", version = "0.1.0-alpha.1" }
radroots-replica-db-schema = { path = "crates/replica-db-schema", version = "0.1.0-alpha.1", default-features = false }
radroots-replica-sync = { path = "crates/replica-sync", version = "0.1.0-alpha.1", default-features = false }
radroots-replica-db = { path = "crates/replica-db", version = "0.1.0-alpha.1", default-features = false }
radroots-replica-db-wasm = { path = "crates/replica-db-wasm", version = "0.1.0-alpha.1" }
radroots-replica-sync-wasm = { path = "crates/replica-sync-wasm", version = "0.1.0-alpha.1" }
radroots-trade = { path = "crates/trade", version = "0.1.0-alpha.1", default-features = false }
radroots-types = { path = "crates/types", version = "0.1.0-alpha.1", default-features = false }

anyhow = { version = "1" }
base64 = { version = "0.22" }
cfg-if = { version = "1" }
chrono = { version = "0.4" }
clap = { version = "4" }
config = { version = "0.14" }
directories = { version = "6" }
futures = { version = "0.3" }
hex = { version = "0.4" }
js-sys = { version = "0.3" }
keyring = { version = "3.6.3", default-features = false, features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "vendored",
] }
nostr = { version = "0.44.2" }
nostr-relay-pool = { version = "0.44.0" }
nostr-sdk = { version = "0.44.1" }
num_cpus = { version = "1.17.0" }
secrecy = { version = "0.10.3" }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde-wasm-bindgen = { version = "0.6" }
sha2 = { version = "0.10", default-features = false }
reqwest = { version = "0.12", default-features = false }
rust_decimal = { version = "1", default-features = false }
rust_decimal_macros = { version = "1" }
sled = { version = "0.34" }
tempfile = { version = "3" }
thiserror = { version = "1" }
tokio = { version = "1" }
toml = { version = "0.8" }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
ts-rs = { version = "11.1" }
typeshare = { version = "1" }
url = { version = "2" }
uuid = { version = "1.22.0", features = ["v4", "v7"] }
zeroize = { version = "1" }
uniffi = { version = "=0.29.4" }
uniffi_build = { version = "=0.29.4" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen-test = { version = "0.3" }
rusqlite = { version = "0.39", default-features = false }
