[workspace]
members = [
  "crates/core",
  "crates/events",
  "crates/event_store",
  "crates/events_codec",
  "crates/events_codec_wasm",
  "crates/events_indexed",
  "crates/geocoder",
  "crates/identity",
  "crates/local_events",
  "crates/log",
  "crates/net",
  "crates/nostr",
  "crates/nostr_accounts",
  "crates/nostr_connect",
  "crates/nostr_signer",
  "crates/nostr_ndb",
  "crates/nostr_runtime",
  "crates/outbox",
  "crates/relay_transport",
  "crates/runtime",
  "crates/secret_vault",
  "crates/simplex_agent_proto",
  "crates/simplex_agent_runtime",
  "crates/simplex_agent_store",
  "crates/simplex_chat_proto",
  "crates/simplex_interop_tests",
  "crates/simplex_smp_crypto",
  "crates/simplex_smp_proto",
  "crates/simplex_smp_transport",
  "crates/sql_wasm_bridge",
  "crates/sql_wasm_core",
  "crates/sql_core",
  "crates/test_fixtures",
  "crates/replica_db_schema",
  "crates/replica_sync",
  "crates/replica_sync_wasm",
  "crates/replica_db",
  "crates/replica_db_wasm",
  "crates/runtime_paths",
  "crates/runtime_distribution",
  "crates/runtime_manager",
  "crates/sdk",
  "crates/sp1_guest_trade",
  "crates/sp1_host_trade",
  "crates/trade",
  "crates/types",
  "crates/protected_store",
  "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.92.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/radrootslabs/lib"
homepage = "https://radroots.org"
readme = "README"

[workspace.dependencies]
radroots_core = { path = "crates/core", version = "0.1.0-alpha.2", default-features = false }
radroots_events = { path = "crates/events", version = "0.1.0-alpha.2", default-features = false }
radroots_event_store = { path = "crates/event_store", version = "0.1.0-alpha.2", default-features = false }
radroots_events_codec = { path = "crates/events_codec", version = "0.1.0-alpha.2", default-features = false }
radroots_events_indexed = { path = "crates/events_indexed", version = "0.1.0-alpha.2", default-features = false }
radroots_geocoder = { path = "crates/geocoder", version = "0.1.0-alpha.2" }
radroots_identity = { path = "crates/identity", version = "0.1.0-alpha.2", default-features = false }
radroots_local_events = { path = "crates/local_events", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr = { path = "crates/nostr", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr_accounts = { path = "crates/nostr_accounts", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr_connect = { path = "crates/nostr_connect", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr_signer = { path = "crates/nostr_signer", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr_ndb = { path = "crates/nostr_ndb", version = "0.1.0-alpha.2", default-features = false }
radroots_runtime = { path = "crates/runtime", version = "0.1.0-alpha.2", default-features = false }
radroots_runtime_paths = { path = "crates/runtime_paths", version = "0.1.0-alpha.2", default-features = false }
radroots_runtime_distribution = { path = "crates/runtime_distribution", version = "0.1.0-alpha.2", default-features = false }
radroots_runtime_manager = { path = "crates/runtime_manager", version = "0.1.0-alpha.2", default-features = false }
radroots_sdk = { path = "crates/sdk", version = "0.1.0-alpha.2", default-features = false }
radroots_log = { path = "crates/log", version = "0.1.0-alpha.2", default-features = false }
radroots_net = { path = "crates/net", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr_runtime = { path = "crates/nostr_runtime", version = "0.1.0-alpha.2", default-features = false }
radroots_outbox = { path = "crates/outbox", version = "0.1.0-alpha.2", default-features = false }
radroots_relay_transport = { path = "crates/relay_transport", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_agent_proto = { path = "crates/simplex_agent_proto", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_agent_runtime = { path = "crates/simplex_agent_runtime", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_agent_store = { path = "crates/simplex_agent_store", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_chat_proto = { path = "crates/simplex_chat_proto", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_interop_tests = { path = "crates/simplex_interop_tests", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_smp_crypto = { path = "crates/simplex_smp_crypto", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_smp_proto = { path = "crates/simplex_smp_proto", version = "0.1.0-alpha.2", default-features = false }
radroots_simplex_smp_transport = { path = "crates/simplex_smp_transport", version = "0.1.0-alpha.2", default-features = false }
radroots_sql_wasm_bridge = { path = "crates/sql_wasm_bridge", version = "0.1.0-alpha.2" }
radroots_sql_wasm_core = { path = "crates/sql_wasm_core", version = "0.1.0-alpha.2", default-features = false }
radroots_sql_core = { path = "crates/sql_core", version = "0.1.0-alpha.2", default-features = false }
radroots_test_fixtures = { path = "crates/test_fixtures", version = "0.1.0-alpha.2" }
radroots_replica_db_schema = { path = "crates/replica_db_schema", version = "0.1.0-alpha.2", default-features = false }
radroots_replica_sync = { path = "crates/replica_sync", version = "0.1.0-alpha.2", default-features = false }
radroots_replica_db = { path = "crates/replica_db", version = "0.1.0-alpha.2", default-features = false }
radroots_replica_db_wasm = { path = "crates/replica_db_wasm", version = "0.1.0-alpha.2" }
radroots_replica_sync_wasm = { path = "crates/replica_sync_wasm", version = "0.1.0-alpha.2" }
radroots_trade = { path = "crates/trade", version = "0.1.0-alpha.2", default-features = false }
radroots_types = { path = "crates/types", version = "0.1.0-alpha.2", default-features = false }
radroots_protected_store = { path = "crates/protected_store", version = "0.1.0-alpha.2", default-features = false }
radroots_secret_vault = { path = "crates/secret_vault", version = "0.1.0-alpha.2", default-features = false }
radroots_sp1_guest_trade = { path = "crates/sp1_guest_trade", version = "0.1.0-alpha.2", default-features = false }
radroots_sp1_host_trade = { path = "crates/sp1_host_trade", version = "0.1.0-alpha.2", default-features = false }

anyhow = { version = "1" }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bincode = { version = "1.3.3" }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
  "alloc",
] }
cfg-if = { version = "1" }
chrono = { version = "0.4" }
clap = { version = "4" }
config = { version = "0.14" }
directories = { version = "6" }
ed25519-dalek = { version = "2.1.1", default-features = false }
futures = { version = "0.3" }
flate2 = { version = "1" }
getrandom = { version = "0.2", default-features = false }
hkdf = { version = "0.12", default-features = false }
hex = { version = "0.4" }
js-sys = { version = "0.3" }
keyring = { version = "3.6.3", default-features = false, features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "vendored",
] }
nostr = { version = "0.44.2" }
nostr-relay-pool = { version = "0.44.0" }
nostr-sdk = { version = "0.44.1" }
num_cpus = { version = "1.17.0" }
secrecy = { version = "0.10.3" }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde-wasm-bindgen = { version = "0.6" }
sha2 = { version = "0.10", default-features = false }
sqlx = { version = "0.8.6", default-features = false }
sp1-build = { version = "6.2.3" }
sp1-sdk = { version = "6.2.3", default-features = false }
sp1-zkvm = { version = "6.2.3" }
reqwest = { version = "0.12", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
rust_decimal = { version = "1", default-features = false }
rust_decimal_macros = { version = "1" }
xsalsa20poly1305 = { version = "0.9", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = [
  "static_secrets",
] }
sled = { version = "0.34" }
tempfile = { version = "3" }
tar = { version = "0.4" }
thiserror = { version = "1" }
tokio = { version = "1" }
toml = { version = "0.8" }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
url = { version = "2" }
uuid = { version = "1.22.0", features = ["v4", "v7"] }
x509-parser = { version = "0.17", default-features = false }
zstd = { version = "0.13", default-features = false }
zeroize = { version = "1" }
uniffi = { version = "=0.29.4" }
uniffi_build = { version = "=0.29.4" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen-test = { version = "0.3" }
rusqlite = { version = "0.32.1", default-features = false }
