[package]
name = "radroots-app-wasm"
description = "WebAssembly bindings for Radroots web apps"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radroots-app-core = { workspace = true, default-features = false }
wasm-bindgen = { workspace = true }
