[package]
name = "radroots-events"
description = "Domain event model for Radroots"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std", "serde", "typeshare"]
std = []
serde = ["dep:serde"]
typeshare = ["dep:typeshare"]

[dependencies]
radroots-core = { workspace = true, default-features = false, features = ["std", "serde", "typeshare"] }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
typeshare = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
