[package]
name = "radroots-identity"
description = "Identity model for Radroots"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["dep:radroots-runtime"]

[dependencies]
radroots-runtime = { workspace = true, optional = true }
nostr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
