[package]
name = "radroots-net-core"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
rt = ["std", "dep:tokio"]
nostr-client = [
    "std",
    "dep:radroots-events",
    "radroots-events/serde",
    "dep:secrecy",
    "dep:hex",
    "dep:tempfile",
    "dep:serde_json",
    "dep:radroots-nostr"
]
directories = ["std", "dep:directories"]
fs-persistence = ["std"]

[dependencies]
radroots-events = { workspace = true, optional = true, default-features = true, features = ["std", "serde", "typeshare"] }
radroots-log = { workspace = true, features = ["std"] }
radroots-nostr = { workspace = true, optional = true, default-features = true, features = ["client", "events"] }
directories = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
futures = { workspace = true }
