[package]
name = "radroots-tangle-db"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
web = ["radroots-sql-core/web"]
native = ["radroots-sql-core/native"]
embedded = ["radroots-sql-core/embedded"]

[dependencies]
radroots-sql-core = { workspace = true }
radroots-tangle-db-schema = { workspace = true }
radroots-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
