[package]
name = "radroots-tangle-events-wasm"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
radroots-events = { workspace = true, default-features = false, features = ["serde"] }
radroots-sql-core = { workspace = true, features = ["bridge"] }
radroots-sql-wasm-core = { workspace = true, default-features = false, features = ["bridge"] }
radroots-tangle-events = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
