[package]
name = "radroots-tangle-schema"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
default = []
ts-rs = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true, optional = true }
