[package]
name = "radroots-trade"
description = "Trade domain model for Radroots"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std", "serde", "typeshare"]
std = []
serde = ["dep:serde", "radroots-core/serde", "radroots-events/serde", "radroots-events-codec/serde"]
typeshare = ["dep:typeshare"]

[dependencies]
radroots-core = { workspace = true, default-features = false }
radroots-events = { workspace = true, default-features = false }
radroots-events-codec = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
typeshare = { workspace = true, optional = true }
