[package]
name = "radroots-app-core"
description = "Core application orchestration for Radroots Studio"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = ["rt", "nostr-client"]
rt = ["radroots-net-core/rt"]
nostr-client = [
    "radroots-net-core/nostr-client",
    "dep:radroots-core",
    "dep:radroots-events-codec",
    "dep:radroots-trade",
    "dep:radroots-identity",
    "dep:radroots-nostr",
]
directories = ["radroots-net-core/directories"]
fs-persistence = ["radroots-net-core/fs-persistence"]

[dependencies]
radroots-log = { workspace = true }
radroots-events = { workspace = true }
radroots-net-core = { workspace = true, features = ["std"] }
radroots-core = { workspace = true, optional = true }
radroots-identity = { workspace = true, optional = true, default-features = false, features = ["std"] }
radroots-events-codec = { workspace = true, features = ["serde_json"], optional = true }
radroots-trade = { workspace = true, features = ["std", "serde", "serde_json"], optional = true }
radroots-nostr = { workspace = true, features = ["events"], optional = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
