[package]
name = "radroots-app-wasm"
description = "WebAssembly bindings for Radroots web apps"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radroots-app-core = { workspace = true, default-features = false }
wasm-bindgen = { workspace = true }
