[package]
name = "radroots-app-wasm"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true
description = "WebAssembly bindings for Radroots web apps"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radroots-app-core = { workspace = true, default-features = false }
wasm-bindgen = { workspace = true }
