[package]
name = "radroots_authority"
publish = false
version = "0.1.0-alpha.2"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Authority model for Radroots"
repository.workspace = true
homepage.workspace = true

[features]
default = ["std"]
std = ["radroots_events/std"]
local_signer = [
  "std",
  "dep:radroots_nostr",
  "radroots_nostr/events",
  "radroots_nostr/std",
]

[dependencies]
radroots_events = { workspace = true, default-features = false }
radroots_nostr = { workspace = true, optional = true, default-features = false }
thiserror = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
