[package]
name = "radroots_core"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Core value model for Radroots"
repository.workspace = true
homepage.workspace = true
readme = "README"
build = "build.rs"

[features]
default = ["std", "serde", "typeshare"]
std = []
serde = ["dep:serde", "rust_decimal/serde"]
typeshare = ["dep:typeshare"]
ts-rs = ["dep:ts-rs"]

[dependencies]
rust_decimal = { workspace = true, default-features = false }
rust_decimal_macros = { workspace = true }
serde = { workspace = true, default-features = false, features = [
  "alloc",
  "derive",
], optional = true }
typeshare = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
rust_decimal = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
